// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`environment cell renderer's exports should match snapshot 1`] = `
<div>
  <div
    class="table-cell__value table-cell__value--numeric"
    data-cy="environment-cell"
  >
    <span>
      999.00
    </span>
  </div>
</div>
`;

exports[`environment cell renderer's exports should match snapshot with needs attention 1`] = `
<div>
  <div
    class="table-cell__value table-cell__value--numeric"
    data-cy="environment-cell"
  >
    <span
      aria-hidden="true"
      class="bp4-icon bp4-icon-symbol-circle env-dirty-dot"
      data-cy="environment-dirty-dot"
      icon="symbol-circle"
    >
      <svg
        data-icon="symbol-circle"
        height="16"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          d="M8 3.01a5 5 0 100 10 5 5 0 100-10z"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span>
      999.00
    </span>
  </div>
</div>
`;
